cambio de estilo, color blanco

--- a/pages/clases-reservas.html
+++ b/pages/clases-reservas.html
@@ -140,8 +140,9 @@
 
         <section class="row paddingTb marginLr">
 
-            <div class="classDescription col-xl-9 col-md-12 col-sm-12">
-                <h3 class="">Descripción de Nuestras Clases</h3>
+            <div class="classDescription col-xl-9 col-md-3 col-sm-12">
+
+                <h3>Descripción de Nuestras Clases</h3>
 
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -208,7 +209,7 @@
                 </div>
             </div>
 
-            <div class="reservation col-xl-3 col-md-12 col-sm-12">
+            <div class="reservation col-xl-3 col-md-3 col-sm-12 mb-4">
 
                 <h3>Reservá tu clase</h3>
                 <select class="form-select" aria-label="Default select example">
@@ -231,6 +232,8 @@
                     <option value="2">12:00</option>
                     <option value="3">13:00</option>
                 </select>
+
+                <button class="btn btn-outline-dark mt-3">Reservar</button>
 
             </div>
 
