--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="images/logo-Magym-sf.png" width="100" height="100" alt="Logo">
         </a>    
 
-        <nav class="navigation navbar navbar-expand-lg bg-light">
+        <nav class="navigation navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
