--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="images/logo-Magym-sf.png" width="100" height="100" alt="Logo">
         </a>    
 
-        <nav class="navigation navbar navbar-expand-lg bg-dark navbar-dark">
+        <nav class="navigation navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="pages/sedes.html" role="button"
