--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="sedes.html" role="button"
@@ -212,7 +212,7 @@
 
 
     <footer>
-        <h3 class="colCentered mb-3">Canales de Comunicación</h3>
+        <h2 class="colCentered mb-3">Canales de Comunicación</h2>
         <ul>
             <li>
                 <a href="https://www.facebook.com" target="_blank">
