estilo a botones, modificacion logo y otros ajustes finos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="headerContainer">
         <h1 class="hello colCentered">¡Bienvenidos a Magym!</h1>
         <a href="#" target="_self" class="logo colCentered">
-            <img src="images/logo-Magym-sf.png" width="100" height="100" alt="Logo">
+            <img src="images/logo-Magym-rosa-sf.png" width="100" height="100" alt="Logo">
         </a>    
 
         <nav class="navigation navbar navbar-expand-lg bg-light">
@@ -154,7 +154,7 @@
         <!-- Sección: Pilares de la Empresa -->
 
         <aside class="pilars pilar1 marginTb marginLr" data-aos="fade-right">
-            <img src="images/pilar.png" width="150px" height="350px" alt="imagen de un pilar">
+            <img src="images/pilar.png" width="150px" height="350px" alt="imagen de un pilar" class="img-fluid">
         </aside>
 
         <article class="moralArticle marginTb">
@@ -201,7 +201,7 @@
 
         <!-- Sección Publicidad y Formulario -->
         <section class="ask">
-            <article class="askArticle marginTb">
+            <article class="askArticle">
                 <h2>¡Unite a Nosotros!</h2>
                 <p>Te invitamos a sumarte a la comunidad de Magym donde tu salud nos interesa. Estamos para acompañarte
                     y brindarte la mejor atención. Cambiá tu rutina, creá hábitos y ganá salud.
@@ -209,7 +209,7 @@
                 <p><a href="vacioPorAhora">Registrate:</a> y accedé a nuestra tienda o reservá tu clase</p>
             </article>
 
-            <aside class="askAside marginTb">
+            <aside class="askAside">
                 <div class="colCentered">
                     <h2>¿Dudas?¿Consultas?</h2>
                     <h3>¡Contactanos!</h3>
