logo nuevo y z-index tienda

--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -22,7 +22,7 @@
     <header class="headerContainer border-bottom border-dark">
         <h1 class="hello colCentered">¡Bienvenidos a Magym!</h1>
         <a href="../index.html" target="_self" class="logo colCentered">
-            <img src="../images/logo-Magym-sf.png" width="100" height="100" alt="Logo">
+            <img src="../images/logo-Magym-rosa-sf.png" width="100" height="100" alt="Logo">
         </a> 
 
         <nav class="navigation navbar navbar-expand-lg bg-light">
